--- a/languages/wp-last-modified-info.pot
+++ b/languages/wp-last-modified-info.pot
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Plural-Forms: nplurals=INTEGER; plural=EXPRESSION;\n"
 "Project-Id-Version: WP Last Modified Info\n"
-"POT-Creation-Date: 2019-06-07 20:30+0530\n"
+"POT-Creation-Date: 2019-06-07 20:48+0530\n"
 "PO-Revision-Date: 2019-03-29 15:38+0530\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -457,12 +457,12 @@ msgstr ""
 
 #: admin/settings/settings-fields.php:694
 msgid ""
-"If your site already have a SEO plugin or a Schema Plugin on your site, then "
-"you can use this option. In this mode, this plugin will try to convert the "
-"post published date output of any SEO or Schema plugin to the post modified "
-"date. This is dynamically applied when the content is displayed, and the "
-"stored content is not changed. Tested with Yoast SEO, Rank Math, All in One "
-"SEO Pack, SEOPress, Schema and many other plugins."
+"If you already have a SEO plugin or a Schema Plugin on your site, then you "
+"can use this option. In this mode, this plugin will try to convert the post "
+"published date output of any SEO or Schema plugin to the post modified date. "
+"This is dynamically applied when the content is displayed, and the stored "
+"content is not changed. Tested with Yoast SEO, Rank Math, All in One SEO "
+"Pack, SEOPress, Schema and many other plugins."
 msgstr ""
 
 #: admin/settings/settings-fields.php:716
