--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,70 @@
 == Changelog ==
 
+= 1.5.9 =
+Release Date: June 8, 2019
+
+* Fixed: GeneratePress missing function error.
+
+= 1.5.8 =
+Release Date: June 8, 2019
+
+* Improved: Output Buffering Mechanism.
+* Fixed: Some Typo.
+* Removed: Some duplicate codes.
+
+= 1.5.7 =
+Release Date: June 7, 2019
+
+* NEW: Schema Markup Compatibility with other SEO and Schema Plugins. Please resave schema option in plugin settings after upgrading your plugin.
+* Fixed: `ob_start` warning.
+
+= 1.5.6 =
+Release Date: May 8, 2019
+
+* Added: A link to hide the notice permanently.
+
+= 1.5.5 =
+Release Date: May 4, 2019
+
+* Added: Option to sort posts by post modified date on edit.php page.
+* Added: A filter `wplmi_post_edit_default_check` to auto check Disable Update Option in Post meta box when creating a new post.
+* Added: A Option in Tools tab to auto check Disable Update Option.
+
+= 1.5.4 =
+Release Date: May 2, 2019
+
+* Fixed: Missing Generatepress Option.
+
+= 1.5.3 =
+Release Date: April 25, 2019
+
+* Added: Post Modified by field in Rest API Output.
+* Fixed: Elementor Deprecated Hooks.
+* Fixed: Conflict with Bootstrap CSS Class.
+* Fixed: Check Box Slider CSS issue.
+* Fixed: Plugin version number.
+* Fixed: Unclosed HTML Tags in Admin Notices.
+
+= 1.5.2 =
+Release Date: March 29, 2019
+
+* Added: A filter `wplmi_elementor_widget_query_filter` to sort Elementor Pro Posts and Portfolio widgets by last modified date.
+* Added: A filter `wplmi_custom_author_list_selection` to set the custom author role for plugin settings.
+
+= 1.5.1 =
+Release Date: March 26, 2019
+
+* Fixed: Some Error Notices.
+
+= 1.5.0 =
+Release Date: March 26, 2019
+
+* Added: Email Notification feature if someone made any change to any post which supports revision.
+* Fixed: Wrong Settings Label.
+* Fixed: Post Updated Message not showing last modified time.
+* Fixed: Some Typo.
+* Removed: Some unused CSS files.
+
 = 1.4.9 =
 Release Date: March 17, 2019
 
